Add 000webhost provider

--- a/local-env/template.yml
+++ b/local-env/template.yml
@@ -26,7 +26,7 @@ Parameters:
     Default: HostingList
   MySQLHost:
     Type: String
-    Default: localhost
+    Default: mariadb
   MySQLDBName:
     Type: String
     Default: quehosting
